# bumpver-test

./: .gitignore  README.md  bumpver.toml  pyproject.toml
.github/workflows/: bump-version-on-merge.yml  release-production.yml
apps/version/: __init__.py
