[build-system]
requires = [
  "setuptools>=69",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "bumpver-test"
version = "0.1.2"
description = "A minimal Python package configured to use BumpVer (automatic versioning)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["versioning", "bumpver"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["bumpver"]

[bumpver]
current_version = "0.1.2"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version to {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[bumpver.file_patterns]
"pyproject.toml" = [
  'current_version = "{version}"',
  'version = "{pep440_version}"',
]
"src/bumpver_test/__init__.py" = [
  '__version__ = "{version}"',
]
"README.md" = [
  "Current version: {version}",
]
