[build-system]
requires = [
  "setuptools>=69",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "bumpver-test"
version = "2.3.9"
description = "A minimal Python package configured to use BumpVer (automatic versioning)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["versioning", "bumpver"]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[dependency-groups]
dev = ["bumpver"]
